--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -20,16 +20,14 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
+        
+    - name: Install uv
+      uses: astral-sh/setup-uv@v3
       with:
-        python-version: ${{ matrix.python-version }}
-        architecture: 'x64'
-
-    - name: Install dependencies
-      run: |
-        pip install poetry
-        poetry install --extras all --with examples --with dev
+        version: "0.4.19"
+        
+    - name: Set up Python ${{ matrix.python-version }}
+      run: uv python install ${{ matrix.python-version }}
 
     - name: Check if git is dirty
       run: |
