--- a/webknossos/Dockerfile
+++ b/webknossos/Dockerfile
@@ -1,21 +1,21 @@
-FROM python:3.10
+FROM python:3.12
 
-COPY requirements.txt /
-
-RUN pip install -r /requirements.txt
+COPY --from=ghcr.io/astral-sh/uv:0.4.20 /uv /bin/uv
 
 RUN mkdir /webknossos
 COPY webknossos/webknossos /webknossos/webknossos
-COPY webknossos/poetry.lock /webknossos/
+COPY webknossos/uv.lock /webknossos/
 COPY webknossos/pyproject.toml /webknossos/
 COPY webknossos/README.md /webknossos/
 
 RUN mkdir /cluster_tools
 COPY cluster_tools/cluster_tools /cluster_tools/cluster_tools
-COPY cluster_tools/poetry.lock /cluster_tools/
+COPY cluster_tools/uv.lock /cluster_tools/
 COPY cluster_tools/pyproject.toml /cluster_tools/
 COPY cluster_tools/README.md /cluster_tools/
 
 WORKDIR /webknossos
 
-RUN poetry config virtualenvs.create false && poetry install --all-extras
+RUN uv export --all-extras --output-file requirements.txt && \
+    uv pip sync --system requirements.txt && \
+    uv cache clean
