--- a/webknossos/tests/cassettes/test_download_dataset[l4_sample].yml
+++ b/webknossos/tests/cassettes/test_download_dataset[l4_sample].yml
@@ -1,7 +1,7 @@
 http_interactions:
   - request:
       method: GET
-      path: /api/v7/datasets/Organization_X/l4_sample
+      path: /api/v8/datasets/Organization_X/l4_sample
       headers:
         host: localhost:9000
         accept: '*/*'
@@ -21,17 +21,17 @@ http_interactions:
         cache-control: no-cache
         referrer-policy: origin-when-cross-origin, strict-origin-when-cross-origin
         x-permitted-cross-domain-policies: master-only
-        date: Wed, 27 Nov 2024 19:53:07 GMT
+        date: Thu, 05 Dec 2024 12:55:47 GMT
         content-type: application/json
         content-length: '1408'
       body:
         encoding: utf8
         data: >-
-          {"name":"l4_sample","dataSource":{"id":{"name":"l4_sample","team":"Organization_X"},"dataLayers":[{"name":"color","category":"color","boundingBox":{"topLeft":[3072,3072,512],"width":1024,"height":1024,"depth":1024},"resolutions":[[1,1,1],[2,2,1],[4,4,1],[8,8,2],[16,16,4]],"elementClass":"uint8","defaultViewConfiguration":{"color":[255,0,0]}},{"name":"segmentation","category":"segmentation","boundingBox":{"topLeft":[3072,3072,512],"width":1024,"height":1024,"depth":1024},"resolutions":[[1,1,1],[2,2,1],[4,4,1],[8,8,2],[16,16,4]],"elementClass":"uint32","largestSegmentId":2504697}],"scale":{"factor":[11.239999771118164,11.239999771118164,28],"unit":"nanometer"}},"dataStore":{"name":"localhost","url":"http://localhost:9000","isScratch":false,"allowsUpload":true,"jobsSupportedByAvailableWorkers":[],"jobsEnabled":false},"owningOrganization":"Organization_X","allowedTeams":[{"id":"570b9f4b2a7c0e3b008da6ec","name":"team_X1","organization":"Organization_X"}],"allowedTeamsCumulative":[{"id":"570b9f4b2a7c0e3b008da6ec","name":"team_X1","organization":"Organization_X"}],"isActive":true,"isPublic":true,"description":null,"displayName":null,"created":1508495293789,"isEditable":true,"lastUsedByUser":1732737187750,"logoUrl":"/assets/images/mpi-logos.svg","sortingKey":1508495293789,"metadata":[],"isUnreported":false,"tags":[],"folderId":"570b9f4e4bb848d0885ea917","publication":null,"usedStorageBytes":0}
+          {"name":"l4_sample","dataSource":{"id":{"name":"l4_sample","team":"Organization_X"},"dataLayers":[{"name":"color","category":"color","boundingBox":{"topLeft":[3072,3072,512],"width":1024,"height":1024,"depth":1024},"resolutions":[[1,1,1],[2,2,1],[4,4,1],[8,8,2],[16,16,4]],"elementClass":"uint8","defaultViewConfiguration":{"color":[255,0,0]}},{"name":"segmentation","category":"segmentation","boundingBox":{"topLeft":[3072,3072,512],"width":1024,"height":1024,"depth":1024},"resolutions":[[1,1,1],[2,2,1],[4,4,1],[8,8,2],[16,16,4]],"elementClass":"uint32","largestSegmentId":2504697}],"scale":{"factor":[11.239999771118164,11.239999771118164,28],"unit":"nanometer"}},"dataStore":{"name":"localhost","url":"http://localhost:9000","isScratch":false,"allowsUpload":true,"jobsSupportedByAvailableWorkers":[],"jobsEnabled":false},"owningOrganization":"Organization_X","allowedTeams":[{"id":"570b9f4b2a7c0e3b008da6ec","name":"team_X1","organization":"Organization_X"}],"allowedTeamsCumulative":[{"id":"570b9f4b2a7c0e3b008da6ec","name":"team_X1","organization":"Organization_X"}],"isActive":true,"isPublic":true,"description":null,"displayName":null,"created":1508495293789,"isEditable":true,"lastUsedByUser":1733403346987,"logoUrl":"/assets/images/mpi-logos.svg","sortingKey":1508495293789,"metadata":[],"isUnreported":false,"tags":[],"folderId":"570b9f4e4bb848d0885ea917","publication":null,"usedStorageBytes":0}
         compression: none
   - request:
       method: POST
-      path: /api/v7/userToken/generate
+      path: /api/v8/userToken/generate
       headers:
         host: localhost:9000
         content-length: '0'
@@ -52,17 +52,17 @@ http_interactions:
         cache-control: no-cache
         referrer-policy: origin-when-cross-origin, strict-origin-when-cross-origin
         x-permitted-cross-domain-policies: master-only
-        date: Wed, 27 Nov 2024 19:53:07 GMT
+        date: Thu, 05 Dec 2024 12:55:47 GMT
         content-type: application/json
         content-length: '34'
       body:
         encoding: utf8
-        data: '{"token":"Z-_3Vmv6NE8IVvNNvF3BJQ"}'
+        data: '{"token":"uksL0mxfP4PzmWiS5f7IRw"}'
         compression: none
   - request:
       method: GET
       path: >-
-        /data/datasets/Organization_X/l4_sample/layers/color/data?mag=8-8-1&x=0&y=0&z=0&width=1&height=1&depth=5&token=Z-_3Vmv6NE8IVvNNvF3BJQ
+        /data/datasets/Organization_X/l4_sample/layers/color/data?mag=8-8-1&x=0&y=0&z=0&width=1&height=1&depth=5&token=uksL0mxfP4PzmWiS5f7IRw
       headers:
         host: localhost:9000
         accept: '*/*'
@@ -84,7 +84,7 @@ http_interactions:
         access-control-allow-origin: '*'
         access-control-expose-headers: MISSING-BUCKETS
         x-permitted-cross-domain-policies: master-only
-        date: Wed, 27 Nov 2024 19:53:07 GMT
+        date: Thu, 05 Dec 2024 12:55:47 GMT
         content-type: application/octet-stream
         content-length: '5'
       body:
@@ -94,7 +94,7 @@ http_interactions:
   - request:
       method: GET
       path: >-
-        /data/datasets/Organization_X/l4_sample/layers/segmentation/data?mag=8-8-1&x=0&y=0&z=0&width=1&height=1&depth=5&token=Z-_3Vmv6NE8IVvNNvF3BJQ
+        /data/datasets/Organization_X/l4_sample/layers/segmentation/data?mag=8-8-1&x=0&y=0&z=0&width=1&height=1&depth=5&token=uksL0mxfP4PzmWiS5f7IRw
       headers:
         host: localhost:9000
         accept: '*/*'
@@ -116,7 +116,7 @@ http_interactions:
         access-control-allow-origin: '*'
         access-control-expose-headers: MISSING-BUCKETS
         x-permitted-cross-domain-policies: master-only
-        date: Wed, 27 Nov 2024 19:53:07 GMT
+        date: Thu, 05 Dec 2024 12:55:47 GMT
         content-type: application/octet-stream
         content-length: '20'
       body:
