--- a/webknossos/tests/cassettes/test_generate_token_for_data_store.yml
+++ b/webknossos/tests/cassettes/test_generate_token_for_data_store.yml
@@ -1,7 +1,7 @@
 http_interactions:
   - request:
       method: POST
-      path: /api/v7/userToken/generate
+      path: /api/v8/userToken/generate
       headers:
         host: localhost:9000
         content-length: '0'
@@ -22,10 +22,10 @@ http_interactions:
         cache-control: no-cache
         referrer-policy: origin-when-cross-origin, strict-origin-when-cross-origin
         x-permitted-cross-domain-policies: master-only
-        date: Wed, 27 Nov 2024 19:53:05 GMT
+        date: Thu, 05 Dec 2024 12:55:44 GMT
         content-type: application/json
         content-length: '34'
       body:
         encoding: utf8
-        data: '{"token":"yvUotPhC4JEnt91qbmg3PQ"}'
+        data: '{"token":"2990GiWef0kMacbkKdA7mg"}'
         compression: none
