--- a/webknossos/pyproject.toml
+++ b/webknossos/pyproject.toml
@@ -169,6 +169,9 @@ fixable = ["ALL"]
 # E712 true-false-comparison https://docs.astral.sh/ruff/rules/true-false-comparison/
 ignore = ["E501", "E712"]
 
+[tool.ruff.lint.per-file-ignores]
+"{examples,tests,script_collection,webknossos/cli}/*" = ["T201"]
+
 [tool.ruff.format]
 # Like Black, use double quotes for strings.
 quote-style = "double"
