--- a/webknossos/tests/cassettes/test_api_client/test_generate_token_for_data_store.yml
+++ b/webknossos/tests/cassettes/test_api_client/test_generate_token_for_data_store.yml
@@ -22,10 +22,10 @@ http_interactions:
         cache-control: no-cache
         referrer-policy: origin-when-cross-origin, strict-origin-when-cross-origin
         x-permitted-cross-domain-policies: master-only
-        date: Fri, 13 Dec 2024 09:20:27 GMT
+        date: Fri, 13 Dec 2024 14:05:39 GMT
         content-type: application/json
         content-length: '34'
       body:
         encoding: utf8
-        data: '{"token":"RoSW-19rhE5AVjEvRPYMXg"}'
+        data: '{"token":"OLyKqWrQR5xXwSSu45MjAw"}'
         compression: none
